package org.swe.slideshow.model;

public interface Aggregate {
    Iterator getIterator();
}

